--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Index</title>
+	<meta charset="UTF-8">
+	<title>Index</title>
+	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js">
+
+	<link rel="stylesheet" href="css/bootstrap-theme.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+	
+<script src="script/main.js"></script>
 </body>
 </html>
