--- a/f7.html
+++ b/f7.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<div id="header"></div>
 	
 <script src="script/main.js"></script>
 </body>
