--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<a href="profile.html">
+	<div id="header">
+		<div>
+			<img src="images/logo.png" id="logo">
+		</div>
+		<div id="user">
+			USERNAME@GMAIL.COM<br>
+			LOGOUT
+		</div>
+		<div id="point_holder">
+			<div id="points">0</div>
+			points
+		</div>
+	</div>
+</a>
 	
 <script src="script/main.js"></script>
 </body>
