--- a/f7.html
+++ b/f7.html
@@ -4,12 +4,26 @@
 	<meta charset="UTF-8">
 	<title>Fast 7</title>
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js">
-
+	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/bootstrap-theme.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div id="header"></div>
+<a href="profile.html">
+	<div id="header">
+		<div>
+			<img src="images/logo.png" id="logo">
+		</div>
+		<div id="user">
+			USERNAME@GMAIL.COM<br>
+			LOGOUT
+		</div>
+		<div id="point_holder">
+			<div id="points">0</div>
+			points
+		</div>
+	</div>
+</a>
 	
 <script src="script/main.js"></script>
 </body>
