--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
 			LOGOUT
 		</div>
 		<div id="point_holder">
-			<div id="points">0</div>
+			<div class="points">0</div>
 			points
 		</div>
 	</div>
