add bootstrap grid

--- a/profile.html
+++ b/profile.html
@@ -9,6 +9,14 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="container-fluid">
+    <div class="row">
+       <div class="col-xs-12 col-sm-12 col-md-12">POINT COUNTER</div>
+    </div>
+    <div class="row"></div>
+    <div class="row"></div>
+    <div class="row"></div>
+  </div>
 	
 <script src="script/main.js"></script>
 </body>
