--- a/profile.html
+++ b/profile.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Profile</title>
-	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap 101 Template</title>
 
-	<link rel="stylesheet" href="css/bootstrap-theme.css">
-	<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-<a href="profile.html">
-	<div id="header">
-		<div>
-			<img src="images/logo.png" id="logo">
+    <!-- Bootstrap -->
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <h1>Hello, world!</h1>
+
+		<div class="row">
+		  <div class="col-xs-12 col-sm-6 col-md-8">.col-xs-12 .col-sm-6 .col-md-8</div>
+		  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
 		</div>
-		<div id="user">
-			USERNAME@GMAIL.COM<br>
-			LOGOUT
+		<div class="row">
+		  <div class="col-xs-6 col-sm-4">.col-xs-6 .col-sm-4</div>
+		  <div class="col-xs-6 col-sm-4">.col-xs-6 .col-sm-4</div>
+		  <!-- Optional: clear the XS cols if their content doesn't match in height -->
+		  <div class="clearfix visible-xs-block"></div>
+		  <div class="col-xs-6 col-sm-4">.col-xs-6 .col-sm-4</div>
 		</div>
-		<div id="point_holder">
-			<div class="points">0</div>
-			points
-		</div>
-	</div>
-</a>
-	
-	
-<script src="script/main.js"></script>
-</body>
+		<div class="row">
+  <div class="col-md-4">.col-md-4</div>
+  <div class="col-md-4">.col-md-4</div>
+  <div class="col-md-4">.col-md-4</div>
+</div>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="script/bootstrap.js"></script>
+  </body>
 </html>
