Add F7 main content

--- a/f7.html
+++ b/f7.html
@@ -3,9 +3,23 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Fast 7</title>
-	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js">
+
+	<!-- google font -->
 	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="css/bootstrap-theme.css">
+
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+	
+	<!-- jqery -->
+	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js">
+
+	<!-- font awesome icons -->
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+	<!-- custom style sheet -->
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -24,7 +38,63 @@
 		</div>
 	</div>
 </a>
-	
+
+<div class="f7main">
+
+	<!-- row 1 icons -->
+	<div class="row grid_content1">
+		<div class="col-lg-2"></div>
+		<div class="col-lg-2">
+			<i class="fa fa-ticket fa-5x"></i><br>
+			Buy Tickets<br>
+			50 points
+		</div>
+		<div class="col-lg-2">
+			<i class="fa fa-video-camera fa-5x"></i><br>
+			Watch Trailer<br>
+			10 points
+		</div>
+		<div class="col-lg-2">
+			<i class="fa fa-location-arrow fa-5x"></i><br>
+			Check-In<br>
+			20 points
+		</div>
+		<div class="col-lg-2">
+			<i class="fa fa-graduation-cap fa-5x"></i><br>
+			Complete Quiz<br>
+			10 points
+		</div>
+		<div class="col-lg-2"></div>
+	</div>
+
+	<!-- row 2 icons -->
+	<div class="row grid_content2">
+		<div class="col-lg-2"></div>
+		<div class="col-lg-2">
+			<i class="fa fa-facebook-square fa-5x"></i><br>
+			Like Fast 7 on Facebook<br>
+			10 points
+		</div>
+		<div class="col-lg-2">
+			<i class="fa fa-facebook fa-5x"></i><br>
+			Share on Facebook<br>
+			15 points
+		</div>
+		<div class="col-lg-2">
+			<i class="fa fa-twitter-square fa-5x"></i><br>
+			Follow Fast 7 on Twitter<br>
+			10 points
+		</div>
+		<div class="col-lg-2">
+			<i class="fa fa-twitter fa-5x"></i><br>
+			Tweet about Fast 7<br>
+			15 points
+		</div>
+		<div class="col-lg-2"></div>
+	</div>
+</div>
+
+
 <script src="script/main.js"></script>
 </body>
 </html>
