--- a/f7.html
+++ b/f7.html
@@ -6,95 +6,161 @@
 
 	<!-- google font -->
 	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-
-	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-
-	<!-- Latest compiled and minified JavaScript -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-	
-	<!-- jqery -->
-	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js">
 
 	<!-- font awesome icons -->
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
+	<link rel="stylesheet" href="css/animate.css">
+
 	<!-- custom style sheet -->
 	<link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
-<a href="profile.html">
-	<div id="header">
+
+	<div id="header" class="animated fadeInDown">
 		<div>
-			<img src="images/logo.png" id="logo">
+			<a href="index.html"><img src="images/logo.png" id="logo"></a>
 		</div>
-		<div id="user">
+		<a href="profile.html">
+		<div id="user" class="visible-xl-block visible-lg-block visible-md-block visible-sm-block">
 			USERNAME@GMAIL.COM<br>
 			LOGOUT
 		</div>
+
 		<div id="point_holder">
 			<div class="points">0</div>
-			points
+			<div class="points_label">points</div>
 		</div>
-	</div>
-</a>
-
-<div class="f7main">
-
-	<!-- row 1 icons -->
-	<div class="row grid_content1">
-		<div class="col-lg-2"></div>
-		<div class="col-lg-2">
-			<i class="fa fa-ticket fa-5x"></i><br>
-			Buy Tickets<br>
-			50 points
-		</div>
-		<div class="col-lg-2">
-			<i class="fa fa-video-camera fa-5x"></i><br>
-			Watch Trailer<br>
-			10 points
-		</div>
-		<div class="col-lg-2">
-			<i class="fa fa-location-arrow fa-5x"></i><br>
-			Check-In<br>
-			20 points
-		</div>
-		<div class="col-lg-2">
-			<i class="fa fa-graduation-cap fa-5x"></i><br>
-			Complete Quiz<br>
-			10 points
-		</div>
-		<div class="col-lg-2"></div>
+		</a>
 	</div>
 
-	<!-- row 2 icons -->
-	<div class="row grid_content2">
-		<div class="col-lg-2"></div>
-		<div class="col-lg-2">
-			<i class="fa fa-facebook-square fa-5x"></i><br>
-			Like Fast 7 on Facebook<br>
-			10 points
+<div class="f7main animated fadeInUp">
+		<div class="row desktop_spacer visible-xl-block visible-lg-block"></div>
+		<div class="row mobile_spacer visible-md-block visible-sm-block visible-xs-block"></div>
+		<!-- row 1 icons -->
+		<div class="row grid_content1">
+			<div class="col-lg-2"></div>
+			<div class="col-lg-2">
+				<a href="http://www.fandango.com/furious7_172963/movieoverview" target="_blank"><i class="fa fa-ticket fa-5x animated flip" id="buy_tickets"></i></a>
+				<i class="fa fa-check-circle fa-5x animated flip" id="buy_tickets_check" style="display:none;color:green;"></i><br>
+				<div class="challenge_title">Buy Tickets</div><br>
+				300 points
+			</div>
+			<div class="col-lg-2">
+				<a href="#" data-toggle="modal" data-target="#videoModal" data-theVideo="http://www.youtube.com/embed/uA59s-f8WqM">
+				<i class="fa fa-video-camera fa-5x animated flip" id="watch_trailer"></i></a>
+				<i class="fa fa-check-circle fa-5x animated flip" id="watch_trailer_check" style="display:none;color:green;"></i><br>
+				<div class="challenge_title">Watch Trailer</div><br>
+				10 points
+			</div>
+
+			<div class="col-lg-2">
+				<a href="#" data-toggle="modal" data-target="#mapModal" data-theVideo="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3302.3214611177013!2d-118.353378!3d34.138117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2be4f253238cf%3A0xd3dd5027799c9a71!2sUniversal+Studios+Hollywood!5e0!3m2!1sen!2sus!4v1416116190841">
+				<i class="fa fa-location-arrow fa-5x animated flip" id="check_in"></i></a>
+				<i class="fa fa-check-circle fa-5x animated flip" id="check_in_check" style="display:none;color:green;"></i><br>
+				<div class="challenge_title">Check-In</div><br>
+				20 points
+			</div>
+			<div class="col-lg-2">
+				<i class="fa fa-graduation-cap fa-5x animated flip" id="quiz"></i>
+				<i class="fa fa-check-circle fa-5x animated flip" id="quiz_check" style="display:none;color:green;"></i><br>
+				<div class="challenge_title">Quiz</div><br>
+				10 points
+			</div>
+			<div class="col-lg-2"></div>
 		</div>
-		<div class="col-lg-2">
-			<i class="fa fa-facebook fa-5x"></i><br>
-			Share on Facebook<br>
-			15 points
+
+		<!-- row 2 icons -->
+		<div class="row grid_content2">
+			<div class="col-lg-2"></div>
+			<div class="col-lg-2">
+				<a href="https://www.facebook.com/FF7OF" target="_blank"><i class="fa fa-facebook-square fa-5x animated flip" id="fb_like"></i></a>
+				<i class="fa fa-check-circle fa-5x animated flip" id="fb_like_check" style="display:none;color:green;"></i><br>
+				<div class="challenge_title">Like</div><br>
+				10 points
+			</div>
+			<div class="col-lg-2">
+				<a href="http://www.facebook.com/sharer/sharer.php?u=http://www.fandango.com/furious7_172963/movieoverview&t=Fast%20andFurious%207" target="_blank"><i class="fa fa-facebook fa-5x animated flip" id="fb_share"></i></a>
+				<i class="fa fa-check-circle fa-5x animated flip" id="fb_share_check" style="display:none;color:green;"></i><br>
+				<div class="challenge_title">Share</div><br>
+				15 points
+			</div>
+			<div class="col-lg-2">
+				<a href="https://twitter.com/ff7movie" target="_blank"><i class="fa fa-twitter-square fa-5x animated flip" id="twitter_follow"></i></a>
+				<i class="fa fa-check-circle fa-5x animated flip" id="twitter_follow_check" style="display:none;color:green;"></i><br>
+				<div class="challenge_title">Follow</div><br>
+				10 points
+			</div>
+			<div class="col-lg-2">
+				<a href="http://twitter.com/intent/tweet?url=http://www.fandango.com/furious7_172963/movieoverview&text=Check%20out%20Fast%20and%20Furious%207" target="_blank">
+				<i class="fa fa-twitter fa-5x animated flip" id="twitter_share"></i></a>
+				<i class="fa fa-check-circle fa-5x animated flip" id="twitter_share_check" style="display:none;color:green;"></i><br>
+				<div class="challenge_title">Tweet</div><br>
+				15 points
+			</div>
+			<div class="col-lg-2"></div>
 		</div>
-		<div class="col-lg-2">
-			<i class="fa fa-twitter-square fa-5x"></i><br>
-			Follow Fast 7 on Twitter<br>
-			10 points
-		</div>
-		<div class="col-lg-2">
-			<i class="fa fa-twitter fa-5x"></i><br>
-			Tweet about Fast 7<br>
-			15 points
-		</div>
-		<div class="col-lg-2"></div>
-	</div>
 </div>
 
 
+<!-- winner declaration -->
+<div id="winner" style="display:none;">
+	CONGRATULATIONS!<br>
+	You've unlocked a free movie ticket from Fandango.<br>
+	Enter Promo Code "4GX7T9073"
+</div>
+
+<!-- trailer modal -->
+<div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="videoModal" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <div>
+                    <iframe width="100%" height="350" src=""></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- map modal -->
+<div class="modal fade" id="mapModal" tabindex="-1" role="dialog" aria-labelledby="mapModal" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <div>
+                    <iframe width="100%" height="350" src=""></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+	  autoPlayYouTubeModal();
+
+  //FUNCTION TO GET AND AUTO PLAY YOUTUBE VIDEO FROM DATATAG
+  function autoPlayYouTubeModal() {
+      var trigger = $("body").find('[data-toggle="modal"]');
+      trigger.click(function () {
+          var theModal = $(this).data("target"),
+              videoSRC = $(this).attr("data-theVideo"),
+              videoSRCauto = videoSRC + "?autoplay=1";
+          $(theModal + ' iframe').attr('src', videoSRCauto);
+          $(theModal + ' button.close').click(function () {
+              $(theModal + ' iframe').attr('src', videoSRC);
+          });
+      });
+  }
+</script>
 <script src="script/main.js"></script>
 </body>
 </html>
